Updated index.html with a new paragraph.

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
         style="width:100%;max-width:640px"></div>
         <div><img src="drawing.jpg" alt="lady's pic"
             style="width:100%;max-width:640px"></div>
+    <p>Github is becoming more exicting</p>
 </body>
 </html>
