added a new photo

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <p>Hey there!!</p>
     <p>My first git repo</p>
     <p>adding a newline to my index.html</p>
+    <div><img src="pic.jpg" alt="lady's pic"
+        style="width:100%;max-width:960px"></div>
 </body>
 </html>
