updated an emergency fix

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>Hey there!!</p>
     <p>My first git repo</p>
     <p>adding a newline to my index.html</p>
+    <p>Another new-line of paragrahp</p>
 </body>
 </html>
