added a new photo

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <p>adding a newline to my index.html</p>
     <div><img src="pic.jpg" alt="lady's pic"
         style="width:100%;max-width:960px"></div>
+        <div><img src="drawing.jpg" alt="lady's pic"
+            style="width:100%;max-width:960px"></div>
 </body>
 </html>
