Update index.html with a paragraph.

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
         <div><img src="drawing.jpg" alt="lady's pic"
             style="width:100%;max-width:640px"></div>
     <p>Github is becoming more exicting</p>
+    <p>This is more awesome</p>
 </body>
 </html>
